<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bezeq Locator</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_equipment">EquipmentActivity</string>
    <string name="hide_radar">הצג רדאר</string>
    <string name="hide_zoom_bar">הצג סרגל מרחק</string>
    <string name="add_equipment">הוספת ציוד חדש</string>
    <string name="map_id_selection">מפה</string>
    <string name="tech_id">ת.ז</string>
    <string name="area">מרכז</string>
    <string name="equip_exnum">מק"ט</string>
    <string name="settlement">ישוב</string>
    <string name="street">רחוב</string>
    <string name="bnum">מספר הבית</string>
    <string name="bsign">אות הבית</string>
    <string name="equip_type">סוג ציוד</string>
    <string name="equip_status">סטטוס</string>
    <string name="latitude">קו רוחב</string>
    <string name="longitude">קו אורך</string>
    <string name="altitude">גובה</string>
    <string name="submit">שלח</string>
    <string name="msags">MSAG</string>
    <string name="boxes">תיבות</string>
    <string name="holes">גובים</string>
    <string name="poles">עמודים</string>
    <string name="cabinets">ארונות</string>
    <string name="filter">סינון לפי סוג</string>
    <string name="title_activity_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="ar_id_selection">תלת מימד</string>
    <string name="problem_description">תיאור הבעיה</string>
    <string name="problem_report">דיווח מהשטח</string>
    <string name="picture">צירוף תמונה</string>
    <string name="search">חיפוש</string>
    <string name="about">אודות</string>
    <string name="adminItem">Admin menu</string>

</resources>
