<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" 
        android:orientation="vertical">

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->


            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Adding/Editing Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Tech id -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech_id"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/techId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/tech_id"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Area -->

            <TextView
                android:id="@+id/tvArea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textColor="#372c24"
                android:visibility="gone" />

            <EditText
                android:id="@+id/area"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/area"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true"
                android:visibility="gone" />
            <!--  -->


            <!-- Equipment exnum -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/equip_exnum"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/equipExnum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/equip_exnum"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Settlement -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settlement"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/settlement"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/settlement"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Street -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/street"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/street"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Building number -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bnum"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/bnum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/bnum"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Building sign -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bsign"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/bsign"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/bsign"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Equipment type -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/equip_type"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/equipType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/equip_type"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Status -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/equip_status"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/equipStatus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/equip_status"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Latitude -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/lat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/latitude"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Longitude -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/lon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/longitude"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->


            <!-- Altitude -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/altitude"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/alt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:hint="@string/altitude"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
            <!--  -->

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="save"
                android:text="@string/submit" />
        </LinearLayout>
        <!-- Adding/Editing Form Ends -->

    </RelativeLayout>

</ScrollView>